--- a/src/SkunkWorksBank.Repository/SkunkWorksBank.Repository.csproj
+++ b/src/SkunkWorksBank.Repository/SkunkWorksBank.Repository.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SkunkWorksBank.Domain\SkunkWorksBank.Domain.csproj" />
   </ItemGroup>
 
