--- a/src/SkunkWorksBank.API/appsettings.json
+++ b/src/SkunkWorksBank.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DevelopmentConnection": "Server=localhost\\SQLEXPRESS;Database=SkunkWorksBank;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
