--- a/src/SkunkWorksBank.Application/SkunkWorksBank.Application.csproj
+++ b/src/SkunkWorksBank.Application/SkunkWorksBank.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SkunkWorksBank.Domain\SkunkWorksBank.Domain.csproj" />
     <ProjectReference Include="..\SkunkWorksBank.Repository\SkunkWorksBank.Repository.csproj" />
   </ItemGroup>
